# Fed_LR

./: CMakeLists.txt  README.md  ckks_and_helper.hpp  compute_enc.hpp  compute_n.hpp  fl_seal_line.cpp  fl_seal_line_testset_same_as_trainset.cpp
dataset/: default_credit_hetero_guest.csv  default_credit_hetero_guest_b.csv  default_credit_hetero_host.csv
